# valkey-daily-dashboard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  dashboard.yml
tests/: conftest.py  test_blame.py  test_cache.py  test_cli.py  test_github_client.py  test_log_parser.py  test_log_parser_realworld.py  test_releases.py  test_report.py  test_scorecard.py  test_service.py  test_stats.py  test_stats_properties.py  test_weekly.py
valkey_oncall/: __init__.py  __main__.py  blame.py  cache.py  cli.py  github_client.py  log_parser.py  releases.py  report.py  scorecard.py  service.py  stats.py  weekly.py  windowing.py
valkey_oncall/assets/: report.css  report.js
