[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valkey-oncall"
version = "0.1.0"
description = "CLI toolkit for monitoring Valkey CI test health"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pytest-httpx>=0.21",
]

[project.scripts]
valkey-oncall = "valkey_oncall.cli:cli"
