[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valkey-oncall"
version = "0.1.0"
description = "CLI toolkit for monitoring Valkey CI test health"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pytest-httpx>=0.21",
    "ruff>=0.15",
]

[project.scripts]
valkey-oncall = "valkey_oncall.cli:cli"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# pyflakes (F) + a focused pycodestyle subset + import sorting (I)
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally place some imports mid-file (near where they're used,
# e.g. hypothesis strategies and section-local helpers).
"tests/**" = ["E402"]
